--- a/backend-js-poc/tsconfig.json
+++ b/backend-js-poc/tsconfig.json
@@ -5,16 +5,15 @@
     "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
-    "moduleResolution": "node",
+    "module": "commonjs",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "es6",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
-      "es2016",
-      "dom"
+      "es2015"
     ]
   }
 }
