--- a/backend-js-poc/package.json
+++ b/backend-js-poc/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/hapi": "^16.1.7",
+    "blipp": "^2.3.0",
     "good": "^7.2.0",
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
