--- a/backend-js-poc/package.json
+++ b/backend-js-poc/package.json
@@ -7,12 +7,14 @@
   "author": "James Sherwood-Jones",
   "license": "MIT",
   "dependencies": {
+    "@types/bunyan": "^1.8.0",
     "@types/hapi": "^16.1.7",
     "blipp": "^2.3.0",
+    "bunyan": "^1.8.10",
     "good": "^7.2.0",
-    "good-console": "^6.4.0",
-    "good-squeeze": "^5.0.2",
+    "good-bunyan": "^1.3.0",
     "hapi": "^16.5.0",
+    "hapi-bunyan": "^0.7.0",
     "pg": "^7.0.2",
     "reflect-metadata": "^0.1.10",
     "sequelize": "^4.4.2",
@@ -23,6 +25,7 @@
     "lint": "tslint -c tslint.json src/**/*.ts",
     "start": "tsc && node dist/index.js",
     "test": "jest",
+    "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
