--- a/backend-js-poc/tsconfig.json
+++ b/backend-js-poc/tsconfig.json
@@ -15,5 +15,11 @@
     "lib": [
       "es2015"
     ]
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "src/**/*.spec.ts"
+  ]
 }
