--- a/backend-js-poc/package.json
+++ b/backend-js-poc/package.json
@@ -11,6 +11,7 @@
     "@types/hapi": "^16.1.7",
     "blipp": "^2.3.0",
     "bunyan": "^1.8.10",
+    "epimetheus": "^1.0.54",
     "good": "^7.2.0",
     "good-bunyan": "^1.3.0",
     "hapi": "^16.5.0",
